# PA

./: .gitignore
api_gateway/: .env.example  main.py  pyproject.toml
api_gateway/src/api/v1/: router.py
api_gateway/src/api/v1/routes/: agent.py  auth.py  file.py  session.py
api_gateway/src/clients/: agent.py  auth.py  base.py  file.py  session.py
api_gateway/src/core/: config.py  security.py
api_gateway/src/schemas/: auth.py  file.py  session.py
auth_service/: .env.example  README.md  main.py  pyproject.toml
auth_service/src/api/v1/: router.py
auth_service/src/api/v1/routes/: auth.py
auth_service/src/core/: config.py  db.py  security.py
auth_service/src/models/: __init__.py  base.py  user.py
auth_service/src/repositories/: user.py
auth_service/src/schemas/: auth_token.py  user.py
auth_service/src/services/: auth.py  user.py
energy_agent/: .env.example  .gitignore  main.py  pyproject.toml
energy_agent/src/agent/: chains.py  chat_models.py  nodes.py  state.py  workflow.py
energy_agent/src/agent/tools/: fallback.py  insight.py  ml_agent.py  registry.py  talk2db.py
energy_agent/src/api/v1/: router.py
energy_agent/src/api/v1/routes/: agent.py  auth.py  file.py  session.py
energy_agent/src/cache/: file.py  session.py
energy_agent/src/core/: config.py  enums.py  exceptions.py  security.py
energy_agent/src/core/exceptions/: file.py  session.py
energy_agent/src/loaders/: base.py  local.py
energy_agent/src/models/: base.py  file.py  session.py  user.py
energy_agent/src/repositories/: file.py  session.py  user.py
energy_agent/src/repositories/auth/: user.py
energy_agent/src/schemas/: base.py  file.py  session.py  user.py
energy_agent/src/schemas/auth/: user.py
energy_agent/src/services/: agent.py  file.py  session.py  user.py
energy_agent/src/services/auth/: auth.py  user.py
energy_agent/src/storage/: base.py  local.py
energy_agent_service/: .env.example  .gitignore  main.py  pyproject.toml
energy_agent_service/src/agent/: scratchpad.ipynb  state.py
energy_agent_service/src/agent/chat_models/: anthropic_.py
energy_agent_service/src/api/v1/: router.py
energy_agent_service/src/api/v1/routes/: memory.py
energy_agent_service/src/cache/: memory.py
energy_agent_service/src/core/: config.py
energy_agent_service/src/loaders/: base.py  local.py
energy_agent_service/src/models/: base.py  memory.py
energy_agent_service/src/repositories/: memory.py
energy_agent_service/src/schemas/: agent.py  base.py  memory.py
energy_agent_service/src/services/: memory.py
energy_agents/: .env.example  README.md  main.py  pyproject.toml
energy_agents_service/: .env.example  pyproject.toml
file_service/: main.py  pyproject.toml
file_service/src/api/v1/: router.py
file_service/src/api/v1/routes/: file.py
file_service/src/cache/: file.py
file_service/src/core/: config.py  enums.py  exceptions.py  secutiry.py
file_service/src/models/: file.py
file_service/src/repositories/: file.py
file_service/src/schemas/: file.py
file_service/src/services/: file.py
file_service/src/storage/: base.py  local.py
frontend/: .env.local.example  MAP_STYLING.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
ml_agent/: README.md  main.py  pyproject.toml  scratchpad.ipynb
ml_agents/: main.py  pyproject.toml
session_service/: .env.example  README.md  main.py  pyproject.toml
(+109 files in other folders)
