[project]
name = "energy-agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.19",
    "langgraph>=0.6.5",
    "lightgbm>=4.6.0",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
